MAKE_log
sources/li_09d_path_tools.c:15:21: error: unknown type name 't_path'
int             is_not_in_path(t_path *path, t_room *room)
                               ^
sources/li_09d_path_tools.c:15:35: error: unknown type name 't_room'
int             is_not_in_path(t_path *path, t_room *room)
                                             ^
sources/li_09d_path_tools.c:17:22: error: use of undeclared identifier 'START'
        if (room->status == START || room->status == END)
                            ^
sources/li_09d_path_tools.c:17:47: error: use of undeclared identifier 'END'
        if (room->status == START || room->status == END)
                                                     ^
sources/li_09d_path_tools.c:28:1: error: unknown type name 't_path'
t_path  *path_cpy(t_path *path)
^
sources/li_09d_path_tools.c:28:18: error: unknown type name 't_path'
t_path  *path_cpy(t_path *path)
                  ^
sources/li_09d_path_tools.c:30:2: error: use of undeclared identifier 't_path'; did you mean 'path'?
        t_path                  *new;
        ^~~~~~
        path
sources/li_09d_path_tools.c:28:26: note: 'path' declared here
t_path  *path_cpy(t_path *path)
                          ^
sources/li_09d_path_tools.c:30:12: error: use of undeclared identifier 'new'
        t_path                  *new;
                                 ^
sources/li_09d_path_tools.c:32:2: error: use of undeclared identifier 'new'
        new = NULL;
        ^
sources/li_09d_path_tools.c:32:8: error: use of undeclared identifier 'NULL'
        new = NULL;
              ^
sources/li_09d_path_tools.c:35:3: error: implicit declaration of function 'add_path' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
                add_path(&new, path->room);
                ^
sources/li_09d_path_tools.c:35:13: error: use of undeclared identifier 'new'
                add_path(&new, path->room);
                          ^
sources/li_09d_path_tools.c:38:10: error: use of undeclared identifier 'new'
        return (new);
                ^
sources/li_09d_path_tools.c:41:15: error: unknown type name 't_path'
void    add_path(t_path **path, t_room *room)
                 ^
sources/li_09d_path_tools.c:41:30: error: unknown type name 't_room'
void    add_path(t_path **path, t_room *room)
                                ^
sources/li_09d_path_tools.c:43:2: error: use of undeclared identifier 't_path'; did you mean 'path'?
        t_path          *new;
        ^~~~~~
        path
sources/li_09d_path_tools.c:41:24: note: 'path' declared here
void    add_path(t_path **path, t_room *room)
                          ^
sources/li_09d_path_tools.c:43:11: error: use of undeclared identifier 'new'
        t_path          *new;
                         ^
sources/li_09d_path_tools.c:44:2: error: use of undeclared identifier 't_path'; did you mean 'path'?
        t_path          *tmp;
        ^~~~~~
        path
sources/li_09d_path_tools.c:41:24: note: 'path' declared here
void    add_path(t_path **path, t_room *room)
                          ^
sources/li_09d_path_tools.c:44:11: error: use of undeclared identifier 'tmp'
        t_path          *tmp;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [sources/li_09d_path_tools.o] Error 1
